--- a/platforma_dlya_naima/.env
+++ b/platforma_dlya_naima/.env
@@ -1,2 +1,2 @@
 GIGACHAT_TOKEN=
-GIGACHAT_BASE_URL=https://beta.saluteai.sberdevices.ru/v1/
+GIGACHAT_BASE_URL=https://gigachat.devices.sberbank.ru/api/v1/
